--- a/Wikipedia/Wikipedia.entitlements
+++ b/Wikipedia/Wikipedia.entitlements
@@ -15,6 +15,8 @@
 		<string>applinks:en.wikipedia.beta.wmflabs.org</string>
 		<string>applinks:en.m.wikipedia.beta.wmflabs.org</string>
 	</array>
+	<key>com.apple.developer.in-app-payments</key>
+	<array/>
 	<key>com.apple.developer.usernotifications.time-sensitive</key>
 	<true/>
 	<key>com.apple.security.application-groups</key>
