Add merchant ID to entitlements and info.plist files

--- a/Wikipedia/Experimental-Info.plist
+++ b/Wikipedia/Experimental-Info.plist
@@ -53,6 +53,8 @@
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>MerchantID</key>
+	<string>merchant.com.adyen.wikimedia</string>
 	<key>NSCameraUsageDescription</key>
 	<string>Opt-in user testing</string>
 	<key>NSLocationAlwaysUsageDescription</key>
