Delete Wikipedia test plan from WikipediaUITests scheme

--- a/Wikipedia.xcodeproj/xcshareddata/xcschemes/WikipediaUITests.xcscheme
+++ b/Wikipedia.xcodeproj/xcshareddata/xcschemes/WikipediaUITests.xcscheme
@@ -40,13 +40,8 @@
       buildConfiguration = "Test"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
-      <TestPlans>
-         <TestPlanReference
-            reference = "container:Test Plans/Wikipedia.xctestplan"
-            default = "YES">
-         </TestPlanReference>
-      </TestPlans>
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      shouldAutocreateTestPlan = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
