--- a/Wikipedia.xcodeproj/xcshareddata/xcschemes/WikipediaUITests.xcscheme
+++ b/Wikipedia.xcodeproj/xcshareddata/xcschemes/WikipediaUITests.xcscheme
@@ -37,7 +37,7 @@
       </BuildActionEntries>
    </BuildAction>
    <TestAction
-      buildConfiguration = "Test"
+      buildConfiguration = "UITests"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
