Configure uitest schema

--- a/Wikipedia.xcodeproj/xcshareddata/xcschemes/WikipediaUITests.xcscheme
+++ b/Wikipedia.xcodeproj/xcshareddata/xcschemes/WikipediaUITests.xcscheme
@@ -106,7 +106,7 @@
       buildConfiguration = "Release">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Release"
+      buildConfiguration = "UITests"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
