Remove UI tests from Test phase on main Wikipedia schema configuration

--- a/Wikipedia.xcodeproj/xcshareddata/xcschemes/Wikipedia.xcscheme
+++ b/Wikipedia.xcodeproj/xcshareddata/xcschemes/Wikipedia.xcscheme
@@ -43,10 +43,7 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <TestPlans>
          <TestPlanReference
-            reference = "container:Test Plans/Wikipedia.xctestplan">
-         </TestPlanReference>
-         <TestPlanReference
-            reference = "container:Test Plans/UITests.xctestplan"
+            reference = "container:Test Plans/Wikipedia.xctestplan"
             default = "YES">
          </TestPlanReference>
       </TestPlans>
