--- a/Wikipedia.xcodeproj/xcshareddata/xcschemes/Staging.xcscheme
+++ b/Wikipedia.xcodeproj/xcshareddata/xcschemes/Staging.xcscheme
@@ -31,10 +31,9 @@
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Staging"
+      buildConfiguration = "StagingDebug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = "ar"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
