adds self to contributors list

--- a/Wikipedia/Code/AboutViewController.plist
+++ b/Wikipedia/Code/AboutViewController.plist
@@ -103,6 +103,7 @@
 		<string>Oliver Keyes</string>
 		<string>Ori Livneh</string>
 		<string>Pedro Vereza</string>
+		<string>Phil Herbert</string>
 		<string>Prayag Verma</string>
 		<string>Rita Ho</string>
 		<string>Robin Schoenbaechler</string>
