Fix disappearing randomizer dice

--- a/Wikipedia/Code/AboutViewController.plist
+++ b/Wikipedia/Code/AboutViewController.plist
@@ -116,6 +116,7 @@
 		<string>Seshadri Mahalingam</string>
 		<string>Shay Nowick</string>
 		<string>Sherah Smith</string>
+		<string>Shilan Patel</string>
 		<string>Siebrand Mazeland</string>
 		<string>Spencer Edgecombe</string>
 		<string>Stephen Niedzielski</string>
