Add Marcos Varani to contributor's list

--- a/Wikipedia/Code/AboutViewController.plist
+++ b/Wikipedia/Code/AboutViewController.plist
@@ -81,6 +81,7 @@
 		<string>Logan Keller</string>
 		<string>Luiggi Minaya Salcedo</string>
 		<string>MagikCow</string>
+		<string>Marcos Varani</string>
 		<string>Maryana Pinchuk</string>
 		<string>Marina Azevedo</string>
 		<string>Matt Cleinman</string>
