--- a/Wikipedia/Code/AboutViewController.plist
+++ b/Wikipedia/Code/AboutViewController.plist
@@ -28,6 +28,7 @@
 	</dict>
 	<key>contributors</key>
 	<array>
+		<string>Grey Olson</string>
 		<string>Abbey Ripstra</string>
 		<string>Adam Baso</string>
 		<string>Alexander Claussen</string>
