Explore Feed: add icons to peek controller context menu

--- a/Wikipedia/Code/AboutViewController.plist
+++ b/Wikipedia/Code/AboutViewController.plist
@@ -61,6 +61,7 @@
 		<string>Dmitry Brant</string>
 		<string>Elena Tonkovidova</string>
 		<string>Ethan Holshouser</string>
+		<string>Evelyn Harthbrooke</string>
 		<string>Gabicoware</string>
 		<string>Gianmarco Salerno</string>
 		<string>Hua Zhenyu</string>
