--- a/Wikipedia/Code/AboutViewController.plist
+++ b/Wikipedia/Code/AboutViewController.plist
@@ -33,6 +33,7 @@
 		<string>Adam Baso</string>
 		<string>Alexander Claussen</string>
 		<string>Amal Ramadan</string>
+		<string>Amani Hunter</string>
 		<string>Amir E. Aharoni</string>
 		<string>Ammar Abdulhamid</string>
 		<string>Anirudh S</string>
