Add yearID to YiR feature config

--- a/WMFData/Sources/WMFDataMocks/Resources/feature-get-config.json
+++ b/WMFData/Sources/WMFDataMocks/Resources/feature-get-config.json
@@ -3,7 +3,8 @@
     "ios": [
         {
             "version": 1,
-            "yir": {
+            "yir": [{
+                "yearID": "2024.1",
                 "isEnabled": true,
                 "countryCodes": [
                     "FR",
@@ -23,7 +24,7 @@
                         "isEnabled": true
                     }
                 }
-            }
+            }]
         }
     ],
     "android": {}
