--- a/WMFData/Sources/WMFDataMocks/Resources/feature-get-config.json
+++ b/WMFData/Sources/WMFDataMocks/Resources/feature-get-config.json
@@ -22,6 +22,9 @@
                     },
                     "editCount": {
                         "isEnabled": true
+                    },
+                    "donateCount": {
+                        "isEnabled": true
                     }
                 }
             }]
