--- a/WMFData/Sources/WMFDataMocks/Resources/feature-get-config.json
+++ b/WMFData/Sources/WMFDataMocks/Resources/feature-get-config.json
@@ -25,6 +25,9 @@
                     },
                     "donateCount": {
                         "isEnabled": true
+                    },
+                    "mostReadDay": {
+                        "isEnabled": true
                     }
                 }
             }]
