--- a/Wikipedia/Code/AboutViewController.plist
+++ b/Wikipedia/Code/AboutViewController.plist
@@ -92,6 +92,7 @@
 		<string>Max Semenik</string>
 		<string>Maxim Korobov</string>
 		<string>Michael Holloway</string>
+		<string>Michael Hulet</string>
 		<string>Michal Ciurus</string>
 		<string>Mikhail Popov</string>
 		<string>Moiz Syed</string>
