Set up viewCount

--- a/WMFData/Sources/WMFDataMocks/Resources/feature-get-config.json
+++ b/WMFData/Sources/WMFDataMocks/Resources/feature-get-config.json
@@ -30,7 +30,10 @@
                         },
                         "mostReadDay": {
                             "isEnabled": true
-                        }
+                        },
+                        "viewCount": {
+                            "isEnabled": true
+                        },
                     }
                 },
                 {
