--- a/Wikipedia/Code/AboutViewController.plist
+++ b/Wikipedia/Code/AboutViewController.plist
@@ -59,6 +59,7 @@
 		<string>David Xia</string>
 		<string>Deepak Mantena</string>
 		<string>Dmitry Brant</string>
+		<string>Douglas Rodrigues Pinto Neto</string>
 		<string>Elena Tonkovidova</string>
 		<string>Ethan Holshouser</string>
 		<string>Evelyn Harthbrooke</string>
